--- a/style.css
+++ b/style.css
@@ -22,3 +22,48 @@ body {
 	color: yellow;
 	transition: all 1s ease-in-out;
 }
+
+.tr-3 {
+	background: orange;
+	transition: all 2s ease-in-out;
+	display: inline-block;
+	
+}
+
+.tr-3:hover {
+	background: purple;
+	transform: rotate(35deg) ;
+	transition: all 2s ease-in-out;
+
+}
+
+#h1 {
+	width: 250px;
+	height: 250px;
+	background-color: purple;
+	transition: all 1s ease-in-out;
+}
+
+
+#h1:hover {
+	width: 400px;
+	height: 400px;
+	background-color: red;
+	transform: rotate(180deg);
+	-webkit-transform:rotate(7deg);
+	transition: all 1s ease-in-out;
+}
+
+p {
+	color: red;
+	background-color: blue;
+	transition: all 2s ease-in-out;
+	display: inline-block;
+}
+
+p:hover {
+	color: yellow;
+	background: red;
+	transform: rotate(180deg);
+	transition: all 2s ease-in-out;
+}
