--- a/style.css
+++ b/style.css
@@ -22,3 +22,13 @@ body {
 	color: yellow;
 	transition: all 1s ease-in-out;
 }
+
+.tr-5{
+		background-color: #ef3456;
+}
+
+.tr-5:hover {
+	-webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+}
